🔧 fix(Home.jsx): fix import statement formatting to use single quotes instead of double quotes for consistency 🔧 fix(Home.jsx): update tooltip text from "Currently working on AdiCare" to "Open to new Opportunities" and update link to LinkedIn profile 🔧 fix(Projects.module.scss): center align the projects container by setting margin to auto

--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -63,7 +63,7 @@
     justify-content: center;
     width: fit-content;
     height: 48px;
-    margin: 48px 0;
+    margin: 48px auto;
     padding: 25px;
     color: var(--white-color);
     font-weight: 500;
